<resources>
    <string name="app_name">炎荣报警APP</string>
    <string name="alermtitle">炎荣报警APP炎荣报警APP炎荣报警APP炎荣报警APP炎荣报警APP炎荣报警APP</string>
    <string name="entry">立即体验</string>
    <string name="alerm_head">最新报警</string>
    <string name="alerm_detail_mapname">设备位置</string>
    <string name="alerm_detail_fqname">设备名称</string>
    <string name="alerm_detail_eventtype">报警类型</string>
    <string name="alerm_fq_1">序号</string>
    <string name="alerm_fq_2">位置</string>
    <string name="alerm_fq_3">防区</string>
    <string name="alerm_fq_4">状态</string>
    <string name="username">姓名：</string>
    <string name="phone">电话：</string>
    <string name="logout">注销退出</string>

    <string name="hello">Hello World, JPush!</string>
    <string name="tag_hint">Tag can be number, alphabet, underscore, Chinese. Use , to split many tags.</string>
    <string name="alias_hint">Alias can be number, alphabet, underscore, Chinese.</string>
    <string name="mobilenumber_hint">The phone number can only start with a "+" or a number,other can only contain "-" and Numbers</string>
    <string name="style_hint">style should be number</string>
    <string name="error_style_empty">style cannot be empty</string>
    <string name="error_alias_empty">alias cannot be empty</string>
    <string name="error_tag_empty">tag cannot be empty</string>
    <string name="error_tag_gs_empty">Invalid format</string>
    <string name="mobilenumber_empty_guide">will clear last set phone number</string>
    <string name="error_network">Failed to init due to network exception.</string>
    <string name="logining">Running in background. Please see log.</string>
    <string name="setting_su">Succeed to set</string>
</resources>
