<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/fq_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/colorBorder"
        android:padding="0.5dp"
        android:showDividers="beginning|middle|end"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBorder"
            android:padding="0dp"
            android:showDividers="beginning|middle|end">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@color/colorFqHeader"
                android:gravity="center"
                android:text="@string/alerm_fq_1" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@color/colorFqHeader"
                android:gravity="center"
                android:text="@string/alerm_fq_2" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@color/colorFqHeader"
                android:gravity="center"
                android:text="@string/alerm_fq_3" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@color/colorFqHeader"
                android:gravity="center"
                android:text="@string/alerm_fq_4" />
        </TableRow>

    </TableLayout>
</LinearLayout>
