<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAlermBg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:width="0dp"
            android:text="@string/alerm_detail_fqname" />

        <TextView
            android:id="@+id/textView_fqname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|end"
            android:text="@string/alerm_detail_fqname"
            android:textColor="@color/colorAlermDetail" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/textView_2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:width="0dp"
            android:text="@string/alerm_detail_mapname" />

        <TextView
            android:id="@+id/textView_mapname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/alerm_detail_fqname"
            android:textColor="@color/colorAlermDetail" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/textView_3"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:width="0dp"
            android:text="@string/alerm_detail_eventtype" />

        <TextView
            android:id="@+id/textView_eventtype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/alerm_detail_fqname"
            android:textColor="@color/colorAlermDetail" />
    </LinearLayout>
</LinearLayout>
